<resources>
    <string name="app_name">Crisis-Response</string>
    <string name="username_box">Username</string>
    <string name="password_box">Password</string>
    <string name="login_button">Login</string>
    <string name="Location_Log">Location Log</string>
    <string name="Group_Chat">Group Chat</string>
    <string name="Settings">Settings</string>
    <string name="User_Managememt">User Management</string>
    <string name="Building_Management">Building Management</string>
    <string name="Room_Management">Room Management</string>
    <string name="Call_Option">Call Options</string>
    <string name="Logout">Logout</string>
    <string name="Edit_User">Edit User</string>
    <string name="Delete_User">Delete User</string>
    <string name="Admin">Admin</string>
    <string name="Create_Building">Create Building</string>
    <string name="Edit_Building">Edit Building</string>
    <string name="Delete_Building">Delete Building</string>
    <string name="Register">Register</string>
    <string name="Crisis_Call">Crisis Call</string>
    <string name="Create_Room">Create Room</string>
    <string name="Edit_Room">Edit Room</string>
    <string name="Delete_Room">Delete Room</string>
    <string name="progress_text">Normal colors</string>
    <string name="crisis1">Physical</string>
    <string name="crisis2">Medical</string>
    <string name="crisis3">Weapon</string>
    <string name="unlisted_crisis">Unlisted Crisis</string>
    <string name="building_name">Building Name</string>
    <string name="room_name">Room Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="create_user">Create User</string>
    <string name="logout_button">Logout</string>
    <string name="change_password">Change Password</string>
    <string name="FCM_PREF">com.example.northlandcaps.crisis_response.fcm_pref</string>
    <string name="FCM_TOKEN">com.example.northlandcaps.crisis_response.fcm_token</string>
    <string name="room">Room</string>
    <string name="building">Building</string>
    <string name="groupchat1">Group Chat</string>
    <string name="Settings1">Settings</string>
    <string name="logout1">Logout</string>
    <string name="locationlog1">Location Log</string>
    <string name="crisiscallbutton1">Crisis Call</string>
    <string name="blur2">Blur</string>
<<<<<<< HEAD
    <string name="create_building_and_or_room">Create Building and/or Room</string>
    <string name="delete_building_and_or_room">Delete Building and/or Room</string>
    <string name="room_name">Room Name</string>
    <string name="building_name">Building Name</string>
=======
    <string name="building_and_room_management">Building and Room Management</string>
>>>>>>> 8b07e8fa04dc01c7a5aae5f00060244a53b8d9ba


</resources>
