<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".crisis_menu"
    android:background="@drawable/background_light">
    <Button
        android:id="@+id/Settings"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:background="@drawable/menu_buttons"
        android:text="@string/Settings"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintDimensionRatio="2:1"
        app:layout_constraintEnd_toStartOf="@+id/groupchat"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locationlog" />

    <Button
        android:id="@+id/crisistype1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/redbuttons"
        android:text="@string/crisis1"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:translationZ="101dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/crisistype2"
        app:layout_constraintDimensionRatio="5.1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="OnClick" />

    <Button
        android:id="@+id/crisistype2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/bluebuttonnormal"
        android:text="@string/crisis2"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:translationZ="101dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/crisistype3"
        app:layout_constraintDimensionRatio="5.1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/crisistype1"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <Button
        android:id="@+id/crisistype3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/greenbuttonnormal"
        android:text="@string/crisis3"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:translationZ="101dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/crisistype4"
        app:layout_constraintDimensionRatio="5.1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/crisistype2" />

    <Button
        android:id="@+id/crisistype4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="144dp"
        android:background="@drawable/menu_buttons"
        android:text="@string/unlisted_crisis"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:translationZ="101dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="5.1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/crisistype3" />

    <Button
        android:id="@+id/groupchat"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:background="@drawable/menu_buttons"
        android:text="@string/Group_Chat"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintDimensionRatio="2:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/locationlog"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/logout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:background="@drawable/menu_buttons"
        android:text="@string/logout_button"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintDimensionRatio="2:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Settings"
        app:layout_constraintTop_toBottomOf="@+id/groupchat" />

    <Button
        android:id="@+id/locationlog"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:background="@drawable/menu_buttons"
        android:text="@string/Location_Log"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintDimensionRatio="2:1"
        app:layout_constraintEnd_toStartOf="@+id/groupchat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/crisiscallbutton"
        android:layout_width="0dp"
        android:layout_height="82dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/call_button"
        android:text="@string/Crisis_Call"
        android:textSize="25pt"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.8"
        android:translationZ="2dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/crisiscallbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/focus_box" />

    <ImageView
        android:id="@+id/blur2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:translationZ="6dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/crisiscallbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@color/focusbox" />

</android.support.constraint.ConstraintLayout>